# VR_Haptics

./: CMakeLists.txt  README.md
data/: 1.csv  closed2.csv  closed_charcode.csv  closed_torque.csv  current_test1.csv  current_test2.csv  current_test4.csv  current_test5.csv  encoder_time_test2.csv  encoderplotting.csv  final_test.csv  idling.csv  plotting.py  plotting_lowpass.py  set_closed_torque.csv  test10.csv  test1_k6.csv  test2.csv  test3.csv  test4_k60.csv  test7.csv  vr_test2.csv  vr_test3.csv  vr_test4.csv
data/11.13_encoder_vs_vr/: plotting_angles.py  test1.csv  test2.csv  test3.csv  test4.csv  test5_no_motion.csv
data/11.16_pose_noise/: plotting.py  plotting_average_filter.py  test1.csv  test11.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test8.csv  test9.csv
data/11.5_debugging/: 0.csv  closed1.csv  closed3.csv  closed_torque2.csv  current_test3.csv  encoderplotting2.csv  final_test_1ms.csv  idling2.csv  idling3.csv  test2_k6.csv  test3_k60.csv
data/11.6_testing/: test1.csv  test4.csv  test5.csv
data/11.9_testing/: encoder_test4.csv  encoder_time_test.csv  encoder_time_test3.csv  vr_test1.csv  vr_test5.csv
drum/: adsr.pd  drum_kit.pd  output~.pd  snare_sampler.pd
include/: motor_communication.hpp  pch.h  platformplugin.h
include/graphics/: graphicsplugin.h  openxr_program.h  platformplugin.h
include/haptics/: computational_geometry.hpp  haptics.hpp  motor_communication.hpp
src/: 4dof_drum_main.cpp  controller_transform_main.cpp  csv.cpp  drum2D_main.cpp  drumkit_main.cpp  encoder_spring_main.cpp  encoder_wall_main.cpp  graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  haptic_scene_main.cpp  main.cpp  motor_main.cc  motor_stop_main.cpp  noisy_encoder_spring_main.cpp  platformplugin_factory.cpp  scene_main.cpp  stop_motor_main.cpp  tracking_main.cpp  vr_spring_main.cpp
src/graphics/: graphicsplugin_vulkan.cpp  logger.cpp  openxr_program.cpp  platformplugin_xlib.cpp
src/haptics/: computational_geometry.cpp  haptics.cpp  motor_communication.cpp
